headers/phonon.h


    typedef void                IPLvoid;            
    typedef int                 IPLint32;           
    typedef float               IPLfloat32;         
    typedef void*               IPLhandle;
    typedef enum {
        IPL_STATUS_SUCCESS,         
        IPL_STATUS_FAILURE,         
        IPL_STATUS_OUTOFMEMORY,     
        IPL_STATUS_INITIALIZATION   
    } IPLerror;
    typedef enum {
        IPL_SCENETYPE_PHONON,   
        IPL_SCENETYPE_EMBREE,   
        IPL_SCENETYPE_FIRERAYS, 
        IPL_SCENETYPE_CUSTOM    
    } IPLSceneType;
    typedef struct {
        IPLSceneType        sceneType;              
        IPLint32            numRays;                
        IPLint32            numDiffuseSamples;      
        IPLint32            numBounces;             
        IPLfloat32          irDuration;             
        IPLint32            ambisonicsOrder;        
        IPLint32            maxConvolutionSources;  
    } IPLSimulationSettings;
    typedef struct {
        IPLint32    indices[3]; 
    } IPLTriangle;
    typedef struct {
        IPLfloat32  lowFreqAbsorption;      
        IPLfloat32  midFreqAbsorption;      
        IPLfloat32  highFreqAbsorption;     
        IPLfloat32  scattering;             
        IPLfloat32  lowFreqTransmission;    
        IPLfloat32  midFreqTransmission;    
        IPLfloat32  highFreqTransmission;   
    } IPLMaterial;
    typedef void(*IPLLoadSceneProgressCallback)(IPLfloat32 progress);
    typedef void(*IPLFinalizeSceneProgressCallback)(IPLfloat32 progress);
    typedef void (*IPLClosestHitCallback)(const IPLfloat32* origin, const IPLfloat32* direction,
        const IPLfloat32 minDistance, const IPLfloat32 maxDistance, IPLfloat32* hitDistance, IPLfloat32* hitNormal,
        IPLMaterial** hitMaterial, IPLvoid* userData);
    typedef void (*IPLAnyHitCallback)(const IPLfloat32* origin, const IPLfloat32* direction,
        const IPLfloat32 minDistance, const IPLfloat32 maxDistance, IPLint32* hitExists, IPLvoid* userData);
    IPLAPI IPLerror iplCreateScene(IPLhandle context, IPLhandle computeDevice,
        IPLSimulationSettings simulationSettings, IPLint32 numMaterials, IPLhandle* scene);
    IPLAPI IPLvoid iplDestroyScene(IPLhandle* scene);
    IPLAPI IPLvoid iplSetRayTracerCallbacks(IPLhandle scene, IPLClosestHitCallback closestHitCallback,
        IPLAnyHitCallback anyHitCallback, IPLvoid* userData);
    IPLAPI IPLvoid iplFinalizeScene(IPLhandle scene, IPLFinalizeSceneProgressCallback progressCallback);