src/bindgen.rs

#[test]
fn bindgen_test_layout_IPLTriangle() {
    assert_eq!(
        ::std::mem::size_of::<IPLTriangle>(),
        12usize,
        concat!("Size of: ", stringify!(IPLTriangle))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLTriangle>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLTriangle))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLTriangle>())).indices as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLTriangle),
            "::",
            stringify!(indices)
        )
    );
}
/// The acoustic properties of a surface. You can specify the acoustic material properties of each triangle,
/// although typically many triangles will share a common material. The acoustic material properties are specified
/// for three frequency bands with center frequencies of 400 Hz, 2.5 KHz, and 15 KHz.
///
/// Below are the acoustic material properties for a few standard materials.
///
/// ```cpp
/// {"generic",{0.10f,0.20f,0.30f,0.05f,0.100f,0.050f,0.030f}}
/// {"brick",{0.03f,0.04f,0.07f,0.05f,0.015f,0.015f,0.015f}}
/// {"concrete",{0.05f,0.07f,0.08f,0.05f,0.015f,0.002f,0.001f}}
/// {"ceramic",{0.01f,0.02f,0.02f,0.05f,0.060f,0.044f,0.011f}}
/// {"gravel",{0.60f,0.70f,0.80f,0.05f,0.031f,0.012f,0.008f}},
/// {"carpet",{0.24f,0.69f,0.73f,0.05f,0.020f,0.005f,0.003f}}
/// {"glass",{0.06f,0.03f,0.02f,0.05f,0.060f,0.044f,0.011f}}
/// {"plaster",{0.12f,0.06f,0.04f,0.05f,0.056f,0.056f,0.004f}}
/// {"wood",{0.11f,0.07f,0.06f,0.05f,0.070f,0.014f,0.005f}}
/// {"metal",{0.20f,0.07f,0.06f,0.05f,0.200f,0.025f,0.010f}}
/// {"rock",{0.13f,0.20f,0.24f,0.05f,0.015f,0.002f,0.001f}}
/// ```
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLMaterial {
    /// < Fraction of sound energy absorbed at low frequencies. Between 0.0 and
    /// 1.0.
    pub lowFreqAbsorption: IPLfloat32,
    /// < Fraction of sound energy absorbed at middle frequencies. Between 0.0
    /// and 1.0.
    pub midFreqAbsorption: IPLfloat32,
    /// < Fraction of sound energy absorbed at high frequencies. Between 0.0 and
    /// 1.0.
    pub highFreqAbsorption: IPLfloat32,
    /// < Fraction of sound energy that is scattered in a random direction when
    /// it reaches the surface. Between 0.0 and 1.0. A value of 0.0 describes
    /// a smooth surface with mirror-like reflection properties; a value of 1.0
    /// describes rough surface with diffuse reflection properties.
    pub scattering: IPLfloat32,
    /// < Fraction of sound energy transmitted through at low frequencies.
    /// Between 0.0 and 1.0.
    /// <b>Used only for direct sound occlusion calculations</b>.
    pub lowFreqTransmission: IPLfloat32,
    /// < Fraction of sound energy transmitted through at middle frequencies.
    /// Between 0.0 and 1.0.
    /// <b>Used only for direct sound occlusion calculations</b>.
    pub midFreqTransmission: IPLfloat32,
    /// < Fraction of sound energy transmitted through at high frequencies.
    /// Between 0.0 and 1.0.
    /// <b>Used only for direct sound occlusion calculations</b>.
    pub highFreqTransmission: IPLfloat32,
}
#[test]
fn bindgen_test_layout_IPLMaterial() {
    assert_eq!(
        ::std::mem::size_of::<IPLMaterial>(),
        28usize,
        concat!("Size of: ", stringify!(IPLMaterial))
    );
    assert_eq!(
        ::std::mem::align_of::<IPLMaterial>(),
        4usize,
        concat!("Alignment of ", stringify!(IPLMaterial))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).lowFreqAbsorption as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(lowFreqAbsorption)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).midFreqAbsorption as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(midFreqAbsorption)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).highFreqAbsorption as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(highFreqAbsorption)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).scattering as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(scattering)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).lowFreqTransmission as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(lowFreqTransmission)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).midFreqTransmission as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(midFreqTransmission)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<IPLMaterial>())).highFreqTransmission as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(IPLMaterial),
            "::",
            stringify!(highFreqTransmission)
        )
    );
}
/// A callback that is called to update the application on the progress of the iplLoadScene function. You can
/// use this to provide the user with visual feedback, like a progress bar.
///
/// \param  progress    Fraction of the loading process that has been completed, between 0.0 and 1.0.
pub type IPLLoadSceneProgressCallback =
    ::std::option::Option<unsafe extern "C" fn(progress: IPLfloat32)>;
/// A callback that is called to update the application on the progress of the iplFinalizeScene function. You can
/// use this to provide the user with visual feedback, like a progress bar.
///
/// \param  progress    Fraction of the finalization process that has been completed, between 0.0 and 1.0.
pub type IPLFinalizeSceneProgressCallback =
    ::std::option::Option<unsafe extern "C" fn(progress: IPLfloat32)>;
/// A callback that is called to calculate the closest hit along a ray. Strictly speaking, the intersection is
/// calculated with a ray _interval_ (equivalent to a line segment). Any ray interval may have multiple points
/// of intersection with scene geometry; this function must return information about the point of intersection that
/// is closest to the ray's origin.
///
/// \param  origin              Array containing the x, y, z coordinates (in that order) of the ray's origin.
/// \param  direction           Array containing the x, y, z coordinates (in that order) of a unit-length vector
/// along the ray's direction.
/// \param  minDistance         The minimum distance from the origin at which an intersection may occur for it
/// to be considered. This function must not return any intersections closer to the
/// origin than this value.
/// \param  maxDistance         The maximum distance from the origin at which an intersection may occur for it
/// to be considered. This function must not return any intersections farther from
/// the origin than this value.
/// \param  hitDistance         [out] Distance between the origin and the closest intersection point on the ray.
/// \param  hitNormal           [out] Array containing the x, y, z coordinates (in that order) of the unit-length
/// surface normal of the geometry at the closest intersection point.
/// \param  hitMaterial         [out] Address of a pointer to the material properties of the surface at the closest
/// intersection point. The array contains the low-, mid-, and high-frequency
/// absorption coefficients, the scattering coefficient, and the low-, mid-, and
/// high-frequency transmission coefficients, in that order.
/// \param  userData            Pointer a block of memory containing arbitrary data, specified during the call to
/// \c ::iplSetRayTracerCallbacks.
pub type IPLClosestHitCallback =
    ::std::option::Option<
        unsafe extern "C" fn(origin: *const IPLfloat32,
                             direction: *const IPLfloat32,
                             minDistance: IPLfloat32,
                             maxDistance: IPLfloat32,
                             hitDistance: *mut IPLfloat32,
                             hitNormal: *mut IPLfloat32,
                             hitMaterial: *mut *mut IPLMaterial,
                             userData: *mut IPLvoid),
    >;
/// A callback that is called to calculate whether a ray hits any geometry. Strictly speaking, the function
/// looks for any intersection with a ray _interval_ (equivalent to a line segment).
///
/// \param  origin              Array containing the x, y, z coordinates (in that order) of the ray's origin.
/// \param  direction           Array containing the x, y, z coordinates (in that order) of a unit-length vector
/// along the ray's direction.
/// \param  minDistance         The minimum distance from the origin at which an intersection may occur for it
/// to be considered.
/// \param  maxDistance         The maximum distance from the origin at which an intersection may occur for it
/// to be considered.
/// \param  hitExists           [out] An integer indicating whether the ray intersects any geometry. A value of 0
/// indicates no intersection, 1 indicates that an intersection exists.
/// \param  userData            Pointer a block of memory containing arbitrary data, specified during the call to
/// \c ::iplSetRayTracerCallbacks.
pub type IPLAnyHitCallback =
    ::std::option::Option<
        unsafe extern "C" fn(origin: *const IPLfloat32,
                             direction: *const IPLfloat32,
                             minDistance: IPLfloat32,
                             maxDistance: IPLfloat32,
                             hitExists: *mut IPLint32,
                             userData: *mut IPLvoid),
    >;
extern "C" {
    /// Creates a Scene object. A Scene object does not store any geometry information on its own; for that you
    /// need to create one or more Static Mesh objects and add them to the Scene object. The Scene object
    /// does contain an array of materials; all triangles in all Static Mesh objects refer to this array in order
    /// to specify their material properties.
    ///
    /// \param  context             The Context object used by the game engine.
    /// \param  computeDevice       Handle to a Compute Device object. Only required if using Radeon Rays for
    /// ray tracing, may be \c NULL otherwise.
    /// \param  simulationSettings  The settings to use for simulation.
    /// \param  numMaterials        The number of materials that are used to describe the various surfaces in
    /// the scene. Materials may not be added or removed once the Scene object is
    /// created.
    /// \param  scene               [out] Handle to the created Scene object.
    ///
    /// \return Status code indicating whether or not the operation succeeded.
    pub fn iplCreateScene(
        context: IPLhandle,
        computeDevice: IPLhandle,
        simulationSettings: IPLSimulationSettings,
        numMaterials: IPLint32,
        scene: *mut IPLhandle,
    ) -> IPLerror;
}
extern "C" {
    /// Destroys a Scene object. If any other API objects are still referencing the Scene object, it will not be
    /// destroyed; destruction occurs when the object's reference count reaches zero.
    ///
    /// \param  scene               [in, out] Address of a handle to the Scene object to destroy.
    pub fn iplDestroyScene(scene: *mut IPLhandle) -> IPLvoid;
}
